testdata/errors/invalidname.go
package main

import _ "github.com/tinygo-org/tinygo/testdata/errors/invalidname"

// ERROR: # github.com/tinygo-org/tinygo/testdata/errors/invalidname
// ERROR: invalidname{{[\\/]}}invalidname.go:3:9: invalid package name _
